<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="12sp"
        android:layout_marginRight="21sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budilnik"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_gravity="right|center"
                android:src="@drawable/avatar" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="57sp"
        android:layout_marginRight="21sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time0730"
            android:textColor="@color/white"
            android:textSize="48sp" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="center|right">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="16sp"
        android:text="@string/time0800"
        android:textColor="@color/white"
        android:textSize="48sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        android:layout_width="312sp"
        android:layout_height="48sp"
        android:layout_marginLeft="24sp"
        android:layout_marginTop="279sp"
        android:background="@drawable/new_budil_button"
        android:text="@string/addBudilnik"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="107sp"
        android:layout_marginTop="77sp"
        android:text="@string/list"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="107sp"
        android:layout_marginTop="292sp"
        android:text="@string/Alarm"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="107sp"
        android:layout_marginTop="292sp"
        android:text="@string/Calendar"
        android:textColor="@color/white"
        android:textSize="11sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="107sp"
        android:layout_marginTop="292sp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="11sp" />


</LinearLayout>